project(mysql-reader-c++ CXX)
EXECUTE_PROCESS(COMMAND date +"%Y%m%d%H%M%S" OUTPUT_VARIABLE ${PROJECT_NAME}_VERSION_BUILD)
SET(${PROJECT_NAME}_VERSION_STAGE ${apidb_VERSION_STAGE})
SET(${PROJECT_NAME}_VERSION_NAME ${apidb_VERSION_NAME})




#################################################################################################################
FIND_PACKAGE(MySQL REQUIRED PATHS ${PROJECT_SOURCE_DIR}/../../cmake/Modules/)
IF(MySQL_FOUND)
	INCLUDE_DIRECTORIES(${MYSQL_INCLUDE_DIR})
ELSEIF()
	MESSAGE(FATAL_ERROR "No se encontro la MySQL client.")
ENDIF()
FIND_PACKAGE(octetos-core REQUIRED PATHS ${PROJECT_SOURCE_DIR}/../cmake/Modules)
IF(OCTETOS_CORE_FOUND)
	INCLUDE_DIRECTORIES(${OCTETOS_CORE_INCLUDE_DIR})
ELSEIF(OCTETOS_CORE_FOUND)
	MESSAGE(FATAL_ERROR "No se encontro la octetos-core-c++.")
ENDIF(OCTETOS_CORE_FOUND)
FIND_PACKAGE(octetos-db-mysql REQUIRED PATHS ${PROJECT_SOURCE_DIR}/../cmake/Modules)
IF(OCTETOS_DB_MYSQL_FOUND)
	INCLUDE_DIRECTORIES(${OCTETOS_DB_MYSQL_INCLUDE_DIR})
ELSEIF(OCTETOS_DB_MYSQL_FOUND)
	MESSAGE(FATAL_ERROR "No se encontro la octetos-db-mysql.")
ENDIF(OCTETOS_DB_MYSQL_FOUND)
FIND_PACKAGE( LibXml2 REQUIRED )
IF(LIBXML2_FOUND)
	INCLUDE_DIRECTORIES(${LIBXML2_INCLUDE_DIR})
ENDIF()
FIND_PACKAGE( Boost COMPONENTS REQUIRED )
IF(Boost_FOUND)
	INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIR})
ENDIF()
FIND_PACKAGE(tar REQUIRED PATHS ${PROJECT_SOURCE_DIR}/../../cmake/Modules/)
IF(TAR_FOUND)
	INCLUDE_DIRECTORIES(${TAR_INCLUDE_DIR})
ELSEIF()
	MESSAGE(FATAL_ERROR "No se encontro la Libreria tar.")
ENDIF()
FIND_PACKAGE(CUnit REQUIRED PATHS ${PROJECT_SOURCE_DIR}/../../cmake/Modules/)
IF(CUNIT_FOUND)
	INCLUDE_DIRECTORIES(${CUNIT_INCLUDE_DIR})
ENDIF()



####################################################################################################
find_package(BISON REQUIRED)
find_package(FLEX REQUIRED)
BISON_TARGET(parser parser.yy ${CMAKE_CURRENT_BINARY_DIR}/parser.tab.cc)
FLEX_TARGET(lexer lexer.l ${CMAKE_CURRENT_BINARY_DIR}/lexer.yy.cc)
ADD_FLEX_BISON_DEPENDENCY(lexer parser)

include_directories(${CMAKE_CURRENT_BINARY_DIR})

ADD_LIBRARY(${PROJECT_NAME}-obj  OBJECT analyzer.cpp scanner.cpp  ${FLEX_lexer_OUTPUTS} ${BISON_parser_OUTPUTS})
set_target_properties(${PROJECT_NAME}-obj  PROPERTIES POSITION_INDEPENDENT_CODE 1 )

ADD_LIBRARY(${PROJECT_NAME}  STATIC analyzer.cpp scanner.cpp  ${FLEX_lexer_OUTPUTS} ${BISON_parser_OUTPUTS})
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PRIVATE  . ${CMAKE_CURRENT_BINARY_DIR})
SET_PROPERTY(TARGET ${PROJECT_NAME}  PROPERTY CXX_STANDARD 11)
SET(LIBREADER ${PROJECT_NAME} PARENT_SCOPE)

